--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
 <body>
     <div class=" main w-full min-h-screen bg-zinc-900 ">
         <form action="/create" method="post" class=" flex gap-5  item-center justify-center py-5 text-white">
-            <input type="text" class=" p-2  rounded-md outline-none  bg-zinc-600" placeholder="Title ">
-            <textarea name="desc" id="message" class=" rounded-md outline-none bg-zinc-600 resize-none w-52" placeholder=" description"></textarea>
+            <input type="text" class=" p-2  rounded-md outline-none  bg-zinc-600" placeholder="Title " name="title">
+            <textarea name="detail" id="message" class=" rounded-md outline-none bg-zinc-600 resize-none w-52" placeholder=" description"></textarea>
             <button class=" px-5 py-2 bg-blue-700 rounded-xl w-40">Create task</button>
         </form>
 
