--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                     <div class=" w-72 px-3 py-4 rounded-md bg-zinc-800">
                         <h1 class=" text-white text-3xl"> <%=val%></h1>
                         <a href="/files/<%= val%>" class=" text-blue-900 mt-5 inline-block pr-16">read more</a>
-                        <a href="/update <%= val%>" class="text-blue-900 mt-5 pl-16">Update</a>
+                        <a href="/update/<%= val%>" class="text-blue-900 mt-5 pl-16">Update</a>
                     </div>
             <% }) %>
         <% }else{ %>
